framec/tests/snapshots/java_snapshots__return_explicit.snap
---
source: framec/tests/java_snapshots.rs
expression: "compile_fixture(\"09_return_explicit\", \"java\")"
---
class ReturnExplicitFrameEvent {
    String _message;
    java.util.ArrayList<Object> _parameters;

    ReturnExplicitFrameEvent(String message) {
        this._message = message;
        this._parameters = new java.util.ArrayList<>();
    }

    ReturnExplicitFrameEvent(String message, java.util.ArrayList<Object> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}

class ReturnExplicitFrameContext {
    ReturnExplicitFrameEvent _event;
    Object _return;
    java.util.HashMap<String, Object> _data;
    boolean _transitioned = false;

    ReturnExplicitFrameContext(ReturnExplicitFrameEvent event, Object defaultReturn) {
        this._event = event;
        this._return = defaultReturn;
        this._data = new java.util.HashMap<>();
        this._transitioned = false;
    }
}

class ReturnExplicitCompartment {
    String state;
    java.util.ArrayList<Object> state_args;
    java.util.HashMap<String, Object> state_vars;
    java.util.ArrayList<Object> enter_args;
    java.util.ArrayList<Object> exit_args;
    ReturnExplicitFrameEvent forward_event;
    ReturnExplicitCompartment parent_compartment;

    ReturnExplicitCompartment(String state) {
        this.state = state;
        this.state_args = new java.util.ArrayList<>();
        this.state_vars = new java.util.HashMap<>();
        this.enter_args = new java.util.ArrayList<>();
        this.exit_args = new java.util.ArrayList<>();
        this.forward_event = null;
        this.parent_compartment = null;
    }

    ReturnExplicitCompartment copy() {
        ReturnExplicitCompartment c = new ReturnExplicitCompartment(this.state);
        c.state_args = new java.util.ArrayList<>(this.state_args);
        c.state_vars = new java.util.HashMap<>(this.state_vars);
        c.enter_args = new java.util.ArrayList<>(this.enter_args);
        c.exit_args = new java.util.ArrayList<>(this.exit_args);
        c.forward_event = this.forward_event;
        c.parent_compartment = this.parent_compartment;
        return c;
    }
}

public class ReturnExplicit {
    private java.util.ArrayList<ReturnExplicitCompartment> _state_stack;
    private ReturnExplicitCompartment __compartment;
    private ReturnExplicitCompartment __next_compartment;
    private java.util.ArrayList<ReturnExplicitFrameContext> _context_stack;

    public ReturnExplicit() {
        _state_stack = new java.util.ArrayList<>();
        _context_stack = new java.util.ArrayList<>();
        this.__compartment = __prepareEnter("Judging", new java.util.ArrayList<>(), new java.util.ArrayList<>());
        this.__next_compartment = null;
    }

    public static ReturnExplicit __create() {
        ReturnExplicit c = new ReturnExplicit();
        ReturnExplicitFrameEvent __e = new ReturnExplicitFrameEvent("$>", c.__compartment.enter_args);
        ReturnExplicitFrameContext __ctx = new ReturnExplicitFrameContext(__e, null);
        c._context_stack.add(__ctx);
        c.__kernel(__e);
        c._context_stack.remove(c._context_stack.size() - 1);
        return c;
    }

    private java.util.HashMap<String, java.util.ArrayList<String>> hsm_chain() {
        java.util.HashMap<String, java.util.ArrayList<String>> m = new java.util.HashMap<>();
        m.put("Judging", new java.util.ArrayList<>(java.util.Arrays.asList("Judging")));
        return m;
    }
    private ReturnExplicitCompartment __prepareEnter(String leaf, java.util.ArrayList<Object> state_args, java.util.ArrayList<Object> enter_args) {
        ReturnExplicitCompartment comp = null;
        for (String name : hsm_chain().get(leaf)) {
            ReturnExplicitCompartment new_comp = new ReturnExplicitCompartment(name);
            new_comp.state_args = new java.util.ArrayList<>(state_args);
            new_comp.enter_args = new java.util.ArrayList<>(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp;
    }

    private void __prepareExit(java.util.ArrayList<Object> exit_args) {
        ReturnExplicitCompartment comp = __compartment;
        while (comp != null) {
            comp.exit_args = new java.util.ArrayList<>(exit_args);
            comp = comp.parent_compartment;
        }
    }

    private void __kernel(ReturnExplicitFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            ReturnExplicitCompartment next_compartment = __next_compartment;
            __next_compartment = null;
            // Exit the current (leaf) state.
            ReturnExplicitFrameEvent exit_event = new ReturnExplicitFrameEvent("<$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            ReturnExplicitFrameEvent forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                ReturnExplicitFrameEvent enter_event = new ReturnExplicitFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message.equals("$>")) {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                ReturnExplicitFrameEvent enter_event = new ReturnExplicitFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            for (ReturnExplicitFrameContext ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private void __router(ReturnExplicitFrameEvent __e) {
        if (__compartment.state.equals("Judging")) {
            _state_Judging(__e, __compartment);
        }
    }

    private void __transition(ReturnExplicitCompartment next) {
        __next_compartment = next;
    }

    public String decide(int score) {
        ReturnExplicitFrameEvent __e = new ReturnExplicitFrameEvent("decide", new java.util.ArrayList<>(java.util.Arrays.asList(score)));
        ReturnExplicitFrameContext __ctx = new ReturnExplicitFrameContext(__e, null);
        _context_stack.add(__ctx);
        try {
            __kernel(_context_stack.get(_context_stack.size() - 1)._event);
            String __result = (String) _context_stack.get(_context_stack.size() - 1)._return;
            _context_stack.remove(_context_stack.size() - 1);
            return __result;
        } catch (RuntimeException __frame_err) {
            _context_stack.remove(_context_stack.size() - 1);
            throw __frame_err;
        }
    }

    private void _state_Judging(ReturnExplicitFrameEvent __e, ReturnExplicitCompartment compartment) {
        if (__e._message.equals("decide")) {
            this._s_Judging_hdl_user_decide(__e, compartment);
            return;
        }
    }

    private void _s_Judging_hdl_user_decide(ReturnExplicitFrameEvent __e, ReturnExplicitCompartment compartment) {
        int score = ((Number) __e._parameters.get(0)).intValue();
                        if score >= 60 {
        _context_stack.get(_context_stack.size() - 1)._return = "pass";
                            return;
                        }
        _context_stack.get(_context_stack.size() - 1)._return = "fail";
                        return;
    }
}
