framec/tests/snapshots/java_snapshots__selfcall.snap
---
source: framec/tests/java_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"java\")"
---
class SelfCallFrameEvent {
    String _message;
    java.util.ArrayList<Object> _parameters;

    SelfCallFrameEvent(String message) {
        this._message = message;
        this._parameters = new java.util.ArrayList<>();
    }

    SelfCallFrameEvent(String message, java.util.ArrayList<Object> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}

class SelfCallFrameContext {
    SelfCallFrameEvent _event;
    Object _return;
    java.util.HashMap<String, Object> _data;
    boolean _transitioned = false;

    SelfCallFrameContext(SelfCallFrameEvent event, Object defaultReturn) {
        this._event = event;
        this._return = defaultReturn;
        this._data = new java.util.HashMap<>();
        this._transitioned = false;
    }
}

class SelfCallCompartment {
    String state;
    java.util.ArrayList<Object> state_args;
    java.util.HashMap<String, Object> state_vars;
    java.util.ArrayList<Object> enter_args;
    java.util.ArrayList<Object> exit_args;
    SelfCallFrameEvent forward_event;
    SelfCallCompartment parent_compartment;

    SelfCallCompartment(String state) {
        this.state = state;
        this.state_args = new java.util.ArrayList<>();
        this.state_vars = new java.util.HashMap<>();
        this.enter_args = new java.util.ArrayList<>();
        this.exit_args = new java.util.ArrayList<>();
        this.forward_event = null;
        this.parent_compartment = null;
    }

    SelfCallCompartment copy() {
        SelfCallCompartment c = new SelfCallCompartment(this.state);
        c.state_args = new java.util.ArrayList<>(this.state_args);
        c.state_vars = new java.util.HashMap<>(this.state_vars);
        c.enter_args = new java.util.ArrayList<>(this.enter_args);
        c.exit_args = new java.util.ArrayList<>(this.exit_args);
        c.forward_event = this.forward_event;
        c.parent_compartment = this.parent_compartment;
        return c;
    }
}

public class SelfCall {
    private java.util.ArrayList<SelfCallCompartment> _state_stack;
    private SelfCallCompartment __compartment;
    private SelfCallCompartment __next_compartment;
    private java.util.ArrayList<SelfCallFrameContext> _context_stack;
    public int count = 0;

    public SelfCall() {
        _state_stack = new java.util.ArrayList<>();
        _context_stack = new java.util.ArrayList<>();
        this.__compartment = __prepareEnter("Active", new java.util.ArrayList<>(), new java.util.ArrayList<>());
        this.__next_compartment = null;
    }

    public static SelfCall __create() {
        SelfCall c = new SelfCall();
        SelfCallFrameEvent __e = new SelfCallFrameEvent("$>", c.__compartment.enter_args);
        SelfCallFrameContext __ctx = new SelfCallFrameContext(__e, null);
        c._context_stack.add(__ctx);
        c.__kernel(__e);
        c._context_stack.remove(c._context_stack.size() - 1);
        return c;
    }

    private java.util.HashMap<String, java.util.ArrayList<String>> hsm_chain() {
        java.util.HashMap<String, java.util.ArrayList<String>> m = new java.util.HashMap<>();
        m.put("Active", new java.util.ArrayList<>(java.util.Arrays.asList("Active")));
        return m;
    }
    private SelfCallCompartment __prepareEnter(String leaf, java.util.ArrayList<Object> state_args, java.util.ArrayList<Object> enter_args) {
        SelfCallCompartment comp = null;
        for (String name : hsm_chain().get(leaf)) {
            SelfCallCompartment new_comp = new SelfCallCompartment(name);
            new_comp.state_args = new java.util.ArrayList<>(state_args);
            new_comp.enter_args = new java.util.ArrayList<>(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp;
    }

    private void __prepareExit(java.util.ArrayList<Object> exit_args) {
        SelfCallCompartment comp = __compartment;
        while (comp != null) {
            comp.exit_args = new java.util.ArrayList<>(exit_args);
            comp = comp.parent_compartment;
        }
    }

    private void __kernel(SelfCallFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            SelfCallCompartment next_compartment = __next_compartment;
            __next_compartment = null;
            // Exit the current (leaf) state.
            SelfCallFrameEvent exit_event = new SelfCallFrameEvent("<$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            SelfCallFrameEvent forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                SelfCallFrameEvent enter_event = new SelfCallFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message.equals("$>")) {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                SelfCallFrameEvent enter_event = new SelfCallFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            for (SelfCallFrameContext ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private void __router(SelfCallFrameEvent __e) {
        if (__compartment.state.equals("Active")) {
            _state_Active(__e, __compartment);
        }
    }

    private void __transition(SelfCallCompartment next) {
        __next_compartment = next;
    }

    public void kick() {
        SelfCallFrameEvent __e = new SelfCallFrameEvent("kick", new java.util.ArrayList<>());
        SelfCallFrameContext __ctx = new SelfCallFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(_context_stack.get(_context_stack.size() - 1)._event);
        _context_stack.remove(_context_stack.size() - 1);
    }

    public int report() {
        SelfCallFrameEvent __e = new SelfCallFrameEvent("report", new java.util.ArrayList<>());
        SelfCallFrameContext __ctx = new SelfCallFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(_context_stack.get(_context_stack.size() - 1)._event);
        int __result = (int) _context_stack.get(_context_stack.size() - 1)._return;
        _context_stack.remove(_context_stack.size() - 1);
        return __result;
    }

    private void _state_Active(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        if (__e._message.equals("kick")) {
            this._s_Active_hdl_user_kick(__e, compartment);
            return;
        }
        if (__e._message.equals("report")) {
            this._s_Active_hdl_user_report(__e, compartment);
            return;
        }
    }

    private void _s_Active_hdl_user_kick(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        this.count = this.count + 1;
        this.report();
        if (!_context_stack.isEmpty() && _context_stack.get(_context_stack.size() - 1)._transitioned) return;
    }

    private void _s_Active_hdl_user_report(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        _context_stack.get(_context_stack.size() - 1)._return = this.count;
    }
}
